Basic css styling added for navbar

--- a/index.html
+++ b/index.html
@@ -46,31 +46,26 @@
                         </div>
                             <div class="col-12 largescreen-nav inline-block">
                                 <div class="row">
-                                <div class="col-5 inline-block">
+                                <div class="col-4 inline-block logo-img"><img src="assets/images/zolsha-logo-2-513a055a.png" alt=""></div>
+                                <div class="col-7 inline-block">
                                 <ul class="no-gutters menucontainer">
-                                    <li class="col-5 list-inline-item menulink" id="menulink1">
+                                    <li class="col-2 list-inline-item menulink" id="menulink1">
                                         <a href="index.html"><span>Home</span></a>
                                     </li>
-                                    <li class="col-5 list-inline-item menulink" id="menulink2">
+                                    <li class="col-2 list-inline-item menulink" id="menulink2">
                                         <a href="order.html"><span>Order</span></a>
                                     </li>
-                                    </ul>
-                                </div>
-                                <div class="col-2 inline-block"><img src="" alt=""></div>
-                                <div class="col-5 inline-block">
-                                    <ul class="no-gutters menucontainer">
-                
-                                    <li class="col-5  list-inline-item menulink" id="menulink3">
+                                    <li class="col-2  list-inline-item menulink" id="menulink3">
                                         <a href="signup.html"><span>Sign Up</span></a>
                                     </li>
-                                    <li class="col-5 list-inline-item menulink" id="menulink4">
+                                    <li class="col-2 list-inline-item menulink" id="menulink4">
                                         <a href="login.html"><span>Login</span></a>
                                     </li>
                                 </ul>
                                 </div>
                                 </div>
                             </div>
-                        </div>
+                            </div>
 
                         
                      </div>
