Main image section created

--- a/index.html
+++ b/index.html
@@ -72,4 +72,9 @@
             </nav>
         </div>
     </header>
+<section>
+    <div>
+        <img src="assets/images/zolshamainimg.jpg" alt="">
+    </div>
+</section>
 </body>
