Styling added to hero image and navbar width reduced

--- a/index.html
+++ b/index.html
@@ -73,8 +73,16 @@
         </div>
     </header>
 <section>
-    <div>
+    <div class="row">
+        <div class="col-12 main-img-container">
         <img src="assets/images/zolshamainimg.jpg" alt="">
+        </div>
+        <div class="col-3 intro-text">
+            <h1>Authentic <br> Indian<br> Cuisine</h1>
+        </div>
     </div>
+</section>
+<section>
+    
 </section>
 </body>
