Styling added for Signup form to match website scheme

--- a/signup.html
+++ b/signup.html
@@ -75,14 +75,18 @@
     <section>
         <div class="row page-heading">
             <div class="col-12">
-                <h2>Sign Up</h2>
-                <i class="fas fa-pepper-hot"></i>
-                <i class="fas fa-pepper-hot"></i>
-                <i class="fas fa-pepper-hot"></i>
+                <h2>Sign Up Now for Online Ordering</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 form-container">
+            <div class="col-12 signup-text">
+                <p>Why sign up??? <br>
+                Gives you access to exclusive offers, allows you to save your favourite dishes & view previous orders.</p>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-container">
               <form class="form-signup" method="POST" action=>
             <div class="form-group">
                 <label for="create-username">Create Username</label>
